[tool.poetry]
name = "blog-api"
version = "0.1.0"
description = ""
authors = ["Zachary Juang <zachary822@me.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}
motor = {extras = ["srv"], version = "^3.1.1"}
pendulum = "^2.1.2"
pyyaml = "^6.0"
newrelic = "^8.4.0"
lxml = "^4.9.1"
markdown = "^3.4.1"
strawberry-graphql = {extras = ["fastapi"], version = "^0.171.3"}
orjson = "^3.8.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.21.0"
pyinstrument = "^4.3.0"
httpx = "^0.24.0"

[tool.mypy]
plugins = ["pydantic.mypy", "strawberry.ext.mypy_plugin"]
ignore_missing_imports = true
show_error_codes = true
exclude = ["tests"]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
